Decode InitialNumericInput from json body for params
