# backend/go-api/swagger/swagger.json
@@ -20,39 +20,12 @@
                 "operationId": "auth-login",
                 "parameters": [
                     {
-                        "description": "Initial Asset Value",
-                        "name": "initAmount",
+                        "description": "Values from user",
+                        "name": "InitialNumericInput",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "description": "Monthly contribution",
-                        "name": "monthlyContribution",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "description": "Interest Rate used in calculation",
-                        "name": "interestRate",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "number"
-                        }
-                    },
-                    {
-                        "description": "Number of years to run calculation",
-                        "name": "numberOfYearsbint",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
+                            "$ref": "#/definitions/main.InitialNumericInput"
                         }
                     }
                 ],
@@ -68,6 +41,9 @@
         }
     },
     "definitions": {
+        "main.InitialNumericInput": {
+            "type": "object"
+        },
         "main.YearlyTotals": {
             "type": "object",
             "properties": {
